Fixed text stretching, icons now square.

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
 /*Section Break*/
 
 .sectionBreak {
-    border-bottom: 0.5vw;
+    border-bottom: 3px;
     border-color: #263523;
     border-style: solid;
     border-left: none;
@@ -71,36 +71,57 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 0.5vw;
+    border: 2px;
     border-color: #263523;
     border-style: solid;
-    border-radius: 5vw;
+    border-radius: 25px;
     background-color: #FFFFFF;
     padding: 1.5vw;
     margin-left: 1vw;
     margin-right: 1vw;
-    max-width: 27%;
-    min-width: 27%;
+    width: 27vw;
+    height: 27vw;
+    max-width: 256px;
+    max-height: 256px;
     text-align: center;
 }
 .project img {
-    width: 80%;
+    width: 14vw;
+    max-width: 128px;
+    max-height: 128px;
     object-fit: cover;
     background-color: #FFFFFF;
 }
 .project h2 {
-    font-size: 2vw;
+    font-size: 24px;
     width: 90%;
     font-weight: bold;
     text-align: center;
     background-color: #FFFFFF;
 }
+@media (max-width: 1080px) {
+    .project h2 {
+        font-size: 20px;
+    }
+}
+@media (max-width: 768px) {
+    .project h2 {
+        font-size: 16px;
+    }
+}
+@media (max-width: 480px) {
+    .project h2 {
+        font-size: 14px;
+    }
+}
 .project a {
     background-color: #FFFFFF;
 }
 .project:hover {
-    min-width: 28%;
-    max-width: 28%;
+    width: 28vw;
+    height: 28vw;
+    max-width: 270px;
+    max-height: 270px;
     background-color: #D2E7D6;
 }
 .project:hover img,
